# omnistor

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: README.md
cmd/: README.md
crates/omnistor/: Cargo.toml
crates/omnistor-console/: Cargo.toml
crates/omnistor-console/src/: json.rs  lib.rs  main.rs  server.rs  ui.html
crates/omnistor-core/: Cargo.toml
crates/omnistor-core/src/: lib.rs
crates/omnistor-metadata/: Cargo.toml
crates/omnistor-metadata/src/: extent.rs  lib.rs
crates/omnistor-placement/: Cargo.toml
crates/omnistor-placement/src/: lib.rs
crates/omnistor-protection/: Cargo.toml
crates/omnistor-protection/src/: lib.rs
crates/omnistor-qos/: Cargo.toml
crates/omnistor-qos/src/: lib.rs
crates/omnistor-quota/: Cargo.toml
crates/omnistor-quota/src/: lib.rs
crates/omnistor-snapshot/: Cargo.toml
crates/omnistor-snapshot/src/: lib.rs
crates/omnistor-tenant/: Cargo.toml
crates/omnistor-tenant/src/: lib.rs
crates/omnistor/src/: lib.rs
deploy/: README.md
docs/: scaling.md
docs/architecture/: dase.md  data-protection.md  hardware.md  metadata.md  overview.md  pools.md  topology.md
docs/features/: multitenancy.md  qos.md  quota.md  snapshots.md  tiering.md
docs/storage/: block.md  file.md  object.md
pkg/: README.md
