[workspace]
resolver = "2"
members = [
    "crates/omnistor-core",
    "crates/omnistor-qos",
    "crates/omnistor-quota",
    "crates/omnistor-tenant",
    "crates/omnistor-metadata",
    "crates/omnistor-placement",
    "crates/omnistor-protection",
    "crates/omnistor-snapshot",
    "crates/omnistor",
    "crates/omnistor-console",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.lints.clippy]
all = "warn"
