[package]
name = "omnistor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
omnistor-core = { path = "../omnistor-core" }
omnistor-qos = { path = "../omnistor-qos" }
omnistor-quota = { path = "../omnistor-quota" }
omnistor-tenant = { path = "../omnistor-tenant" }
omnistor-metadata = { path = "../omnistor-metadata" }
omnistor-placement = { path = "../omnistor-placement" }
omnistor-protection = { path = "../omnistor-protection" }
omnistor-snapshot = { path = "../omnistor-snapshot" }

[lints]
workspace = true
